---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 21 March 2021
  Bugfixes:
    - Fixed crash when placing transformer on a newly added or renamed surface
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 18 February 2021
  Bugfixes:
    - Fixed crash when starting new game
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 17 February 2021
  Bugfixes:
    - Fixed incompatibility with Mining Drones
    - Fixed some poles never being checked for overload
    - Fixed crash in Factorio 1.1.25
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 12 February 2021
  Features:
    - Added support for modded poles from Bio Industries (more can be added upon request)
  Changes:
    - Transformers now have a red tint to distinguish them from power switches
    - "Very big electric pole" renamed to "Huge electric pole"
    - Lots of internal name changes
    - Transformers no longer show up in both "Consumption" and "Production" sides of electric network statistics
  Bugfixes:
    - Fixed mining a transformer or huge electric pole returns the wrong item to the player's inventory
    - Transformer internal buffer sizes now shrink dynamically (instead of just growing in previous versions)
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 8 February 2021
  Bugfixes:
    - Fixed crash on load
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 8 February 2021
  Features:
    - Added setting to customise power poles' maximum consumptions
    - Added support for modded poles from AAI Industry, Bob's Power, and Cargo Ships (more can be added upon request)