@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.5
 Date: 21 March 2021
+  Changes:
+    - Increased default maximum consumptions when playing with Krastorio2 (you have to reset mod settings to default each time you load with/without K2)
   Bugfixes:
     - Fixed crash when placing transformer on a newly added or renamed surface
 ---------------------------------------------------------------------------------------------------
